--- a/.github/workflows/artifactoryTests.yml
+++ b/.github/workflows/artifactoryTests.yml
@@ -7,7 +7,7 @@ on:
 # Ensures that only the latest commit is running for each PR at a time.
 # Ignores this rule for push events.
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || (github.ref github.sha) }}
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.run_id }}
   cancel-in-progress: true
 jobs:
   Artifactory-Tests:
